--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,12 @@ edition = "2021"
 
 [dependencies]
 datafusion = "45"
+datafusion-proto = "45"
 async-trait = "0.1"
 futures = "0.3"
 async-stream = { version = "0.3" }
 bb8 = { version = "0.9" }
 bb8-postgres = { version = "0.9" }
-postgres-native-tls = { version = "0.5.0" }
+
+[dev-dependencies]
+tokio = { version = "1", features = ["full"] }
