Support time related types

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,8 @@ async-trait = "0.1"
 futures = "0.3"
 async-stream = { version = "0.3" }
 bb8 = { version = "0.9" }
-bb8-postgres = { version = "0.9" }
+bb8-postgres = { version = "0.9", features = ["with-chrono-0_4"] }
+chrono = "0.4"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["full"] }
