--- a/integration-tests/Cargo.toml
+++ b/integration-tests/Cargo.toml
@@ -5,6 +5,6 @@ edition = "2021"
 
 [dependencies]
 datafusion-remote-table = { path = "../remote-table" }
-datafusion = "45"
-tokio = { version = "1", features = ["full"] }
+datafusion = { workspace = true }
+tokio = { workspace = true }
 ctor = "0.4"
