--- a/integration-tests/Cargo.toml
+++ b/integration-tests/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [dependencies]
 datafusion-remote-table = { path = "../remote-table" }
 datafusion = { workspace = true }
+datafusion-proto = { workspace = true }
 tokio = { workspace = true }
 ctor = "0.4"
