--- a/integration-tests/testdata/docker-compose.yaml
+++ b/integration-tests/testdata/docker-compose.yaml
@@ -9,3 +9,12 @@ services:
       - "5432:5432"
     volumes:
       - ./postgres_init.sql:/docker-entrypoint-initdb.d/init.sql
+
+  mysql:
+    image: mysql:latest
+    environment:
+      - MYSQL_ROOT_PASSWORD=password
+    ports:
+      - "3306:3306"
+    volumes:
+      - ./mysql_init.sql:/docker-entrypoint-initdb.d/init.sql
