--- a/integration-tests/testdata/docker-compose.yaml
+++ b/integration-tests/testdata/docker-compose.yaml
@@ -18,3 +18,13 @@ services:
       - "3306:3306"
     volumes:
       - ./mysql_init.sql:/docker-entrypoint-initdb.d/init.sql
+
+  oracle:
+    image: wnameless/oracle-xe-11g-r2
+    environment:
+      - ORACLE_ALLOW_REMOTE=true
+    ports:
+      - "49160:22"
+      - "49161:1521"
+    volumes:
+      - ./oracle_init.sql:/docker-entrypoint-initdb.d/init.sql
