--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Install oracle instant client
         run: |
-          sudo apt-get install -y libaio1
+          sudo apt-get install -y libaio-dev
           wget https://download.oracle.com/otn_software/linux/instantclient/2370000/instantclient-basic-linux.x64-23.7.0.25.01.zip
           unzip instantclient-basic-linux.x64-23.7.0.25.01.zip
           sudo mv instantclient_23_7 /opt/oracle
