--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,10 +22,12 @@ jobs:
       - name: Install oracle instant client
         run: |
           sudo apt-get install -y libaio-dev
+          mkdir -p /opt/oracle
+          cd /opt/oracle
           wget https://download.oracle.com/otn_software/linux/instantclient/2370000/instantclient-basic-linux.x64-23.7.0.25.01.zip
           unzip instantclient-basic-linux.x64-23.7.0.25.01.zip
-          sudo mv instantclient_23_7 /opt/oracle
-          export LD_LIBRARY_PATH=/opt/oracle:$LD_LIBRARY_PATH
+          export LD_LIBRARY_PATH=/opt/oracle/instantclient_23_7:$LD_LIBRARY_PATH
+          echo $LD_LIBRARY_PATH
 
       - name: Run cargo test
         uses: actions-rs/cargo@v1
