--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
           cd /opt/oracle
           wget https://download.oracle.com/otn_software/linux/instantclient/2370000/instantclient-basic-linux.x64-23.7.0.25.01.zip
           unzip instantclient-basic-linux.x64-23.7.0.25.01.zip
+          ls -l /opt/oracle/instantclient_23_7
           export LD_LIBRARY_PATH=/opt/oracle/instantclient_23_7:$LD_LIBRARY_PATH
           echo $LD_LIBRARY_PATH
 
