--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,10 +28,13 @@ jobs:
           unzip instantclient-basic-linux.x64-23.7.0.25.01.zip
           ls -l /opt/oracle/instantclient_23_7
           export LD_LIBRARY_PATH=/opt/oracle/instantclient_23_7:$LD_LIBRARY_PATH
+          export PATH=/opt/oracle/instantclient_23_7:$PATH
           sudo cp -r /opt/oracle/instantclient_23_7 /usr/local/lib/
           ls -l /usr/local/lib/instantclient_23_7
           export LD_LIBRARY_PATH=/usr/local/lib/instantclient_23_7:$LD_LIBRARY_PATH
+          export PATH=/usr/local/lib/instantclient_23_7:$PATH
           echo $LD_LIBRARY_PATH
+          echo $PATH
 
       - name: Run cargo test
         uses: actions-rs/cargo@v1
