--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,21 +21,12 @@ jobs:
 
       - name: Install oracle instant client
         run: |
-          sudo apt-get install -y libaio-dev
+          sudo apt-get install -y libaio1 libaio-dev
           mkdir -p /opt/oracle
           cd /opt/oracle
           wget https://download.oracle.com/otn_software/linux/instantclient/2370000/instantclient-basic-linux.x64-23.7.0.25.01.zip
           unzip instantclient-basic-linux.x64-23.7.0.25.01.zip
-          ls -l /opt/oracle/instantclient_23_7
-          export LD_LIBRARY_PATH=/opt/oracle/instantclient_23_7:$LD_LIBRARY_PATH
-          export PATH=/opt/oracle/instantclient_23_7:$PATH
-          sudo cp -r /opt/oracle/instantclient_23_7 /usr/local/lib/
-          ls -l /usr/local/lib/instantclient_23_7
-          export LD_LIBRARY_PATH=/usr/local/lib/instantclient_23_7:$LD_LIBRARY_PATH
-          export PATH=/usr/local/lib/instantclient_23_7:$PATH
-          echo $LD_LIBRARY_PATH
-          echo $PATH
-          echo "LD_LIBRARY_PATH=/usr/local/lib/instantclient_23_7" >> $GITHUB_ENV
+          echo "LD_LIBRARY_PATH=/opt/oracle/instantclient_23_7" >> $GITHUB_ENV
 
       - name: Run cargo test
         uses: actions-rs/cargo@v1
