--- a/remote-table/Cargo.toml
+++ b/remote-table/Cargo.toml
@@ -29,9 +29,12 @@ mysql_async = { version = "0.35", features = [
     "bigdecimal",
 ] }
 # Oracle
-#bb8-oracle = { version = "0.2", features = ["chrono"]}
 oracle = "0.6"
+#bb8-oracle = { version = "0.2", features = ["chrono"]}
 bb8-oracle = { git = "https://github.com/lewiszlw/bb8-oracle.git", branch = "bump-bb8" }
+# Sqlite
+rusqlite = "0.32"
+tokio-rusqlite = { version = "0.6.0", features = ["bundled"] }
 
 [dev-dependencies]
 tokio = { workspace = true }
