--- a/remote-table/Cargo.toml
+++ b/remote-table/Cargo.toml
@@ -33,5 +33,5 @@ mysql_async = { version = "0.35", features = [
 oracle = "0.6"
 bb8-oracle = { version = "0.3", features = ["chrono"]}
 # Sqlite
-rusqlite = "0.32"
+rusqlite = { version = "0.32", features = ["column_decltype"] }
 tokio-rusqlite = { version = "0.6.0", features = ["bundled"] }
