--- a/remote-table/Cargo.toml
+++ b/remote-table/Cargo.toml
@@ -16,6 +16,7 @@ async-trait = "0.1"
 futures = "0.3"
 async-stream = { version = "0.3" }
 chrono = "0.4"
+time = "0.3"
 prost = { workspace = true }
 derive-with = "0.6"
 tokio = { workspace = true }
