--- a/remote-table/Cargo.toml
+++ b/remote-table/Cargo.toml
@@ -17,6 +17,7 @@ futures = "0.3"
 async-stream = { version = "0.3" }
 chrono = "0.4"
 time = "0.3"
+bigdecimal = "0.4"
 prost = { workspace = true }
 derive-with = "0.6"
 tokio = { workspace = true }
