--- a/remote-table/Cargo.toml
+++ b/remote-table/Cargo.toml
@@ -19,6 +19,7 @@ chrono = "0.4"
 time = "0.3"
 bigdecimal = "0.4"
 num-bigint = "0.4"
+byteorder = "1.5.0"
 prost = { workspace = true }
 derive-with = "0.6"
 tokio = { workspace = true }
