--- a/remote-table/Cargo.toml
+++ b/remote-table/Cargo.toml
@@ -20,12 +20,13 @@ time = "0.3"
 bigdecimal = "0.4"
 num-bigint = "0.4"
 byteorder = "1.5.0"
+serde_json = "1.0"
 prost = { workspace = true }
 derive-with = "0.6"
 tokio = { workspace = true }
 bb8 = { version = "0.9" }
 # Postgres
-bb8-postgres = { version = "0.9", features = ["with-chrono-0_4"] }
+bb8-postgres = { version = "0.9", features = ["with-chrono-0_4", "with-serde_json-1"] }
 # MySQL
 mysql_async = { version = "0.35", features = [
     "native-tls-tls",
