Add postgis geometry type test

--- a/integration-tests/testdata/docker-compose.yaml
+++ b/integration-tests/testdata/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: postgres:latest
+    image: postgis/postgis:latest
     environment:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
