Throw err instead of panic

--- a/integration-tests/testdata/docker-compose.yaml
+++ b/integration-tests/testdata/docker-compose.yaml
@@ -21,6 +21,7 @@ services:
 
   oracle:
     image: wnameless/oracle-xe-11g-r2
+#    image: softwareplant/oracle:latest
     environment:
       - ORACLE_ALLOW_REMOTE=true
     ports:
