Refactor remote table constructors

--- a/integration-tests/Cargo.toml
+++ b/integration-tests/Cargo.toml
@@ -2,6 +2,7 @@
 name = "integration_tests"
 version = "0.1.0"
 edition = "2021"
+publish = false
 
 [dependencies]
 datafusion-remote-table = { path = "../remote-table" }
