Add getters to conn options

--- a/remote-table/Cargo.toml
+++ b/remote-table/Cargo.toml
@@ -23,6 +23,7 @@ byteorder = "1.5.0"
 serde_json = "1.0"
 prost = { workspace = true }
 derive-with = "0.6"
+derive-getters = "0.5"
 tokio = { workspace = true }
 bb8 = { version = "0.9" }
 # Postgres
