--- a/remote-table/Cargo.toml
+++ b/remote-table/Cargo.toml
@@ -9,6 +9,12 @@ license = "MIT"
 repository = "https://github.com/systemxlabs/datafusion-remote-table"
 readme = "../README.md"
 
+[features]
+postgres = ["dep:bb8-postgres"]
+mysql = ["dep:mysql_async"]
+oracle = ["dep:oracle", "dep:bb8-oracle"]
+sqlite = ["dep:rusqlite", "dep:tokio-rusqlite"]
+
 [dependencies]
 datafusion = { workspace = true }
 datafusion-proto = { workspace = true }
@@ -27,17 +33,17 @@ derive-getters = "0.5"
 tokio = { workspace = true }
 bb8 = { version = "0.9" }
 # Postgres
-bb8-postgres = { version = "0.9", features = ["with-chrono-0_4", "with-serde_json-1"] }
+bb8-postgres = { version = "0.9", features = ["with-chrono-0_4", "with-serde_json-1"], optional = true }
 # MySQL
 mysql_async = { version = "0.35", features = [
     "native-tls-tls",
     "chrono",
     "time",
     "bigdecimal",
-] }
+], optional = true }
 # Oracle
-oracle = "0.6"
-bb8-oracle = { version = "0.3", features = ["chrono"]}
+oracle = { version = "0.6", optional = true }
+bb8-oracle = { version = "0.3", features = ["chrono"], optional = true}
 # Sqlite
-rusqlite = { version = "0.32", features = ["column_decltype"] }
-tokio-rusqlite = { version = "0.6.0", features = ["bundled"] }
+rusqlite = { version = "0.32", features = ["column_decltype"], optional = true }
+tokio-rusqlite = { version = "0.6.0", features = ["bundled"], optional = true }
