--- a/remote-table/Cargo.toml
+++ b/remote-table/Cargo.toml
@@ -10,9 +10,10 @@ repository = "https://github.com/systemxlabs/datafusion-remote-table"
 readme = "../README.md"
 
 [features]
-postgres = ["dep:bb8-postgres"]
+default = ["postgres", "mysql", "oracle"]
+postgres = ["dep:bb8", "dep:bb8-postgres"]
 mysql = ["dep:mysql_async"]
-oracle = ["dep:oracle", "dep:bb8-oracle"]
+oracle = ["dep:bb8", "dep:oracle", "dep:bb8-oracle"]
 sqlite = ["dep:rusqlite", "dep:tokio-rusqlite"]
 
 [dependencies]
@@ -31,7 +32,7 @@ prost = { workspace = true }
 derive-with = "0.6"
 derive-getters = "0.5"
 tokio = { workspace = true }
-bb8 = { version = "0.9" }
+bb8 = { version = "0.9", optional = true }
 # Postgres
 bb8-postgres = { version = "0.9", features = ["with-chrono-0_4", "with-serde_json-1"], optional = true }
 # MySQL
