--- a/remote-table/Cargo.toml
+++ b/remote-table/Cargo.toml
@@ -31,6 +31,7 @@ serde_json = "1.0"
 prost = { workspace = true }
 derive-with = "0.6"
 derive-getters = "0.5"
+itertools = "0.14"
 tokio = { workspace = true }
 bb8 = { version = "0.9", optional = true }
 # Postgres
