--- a/remote-table/Cargo.toml
+++ b/remote-table/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "datafusion-remote-table"
-version = "0.11.0"
+version = "0.11.1"
 edition = "2024"
 authors = ["lewiszlw <lewiszlw520@gmail.com>"]
 description = "A DataFusion table provider for executing SQL queries on remote databases"
@@ -10,7 +10,7 @@ repository = "https://github.com/systemxlabs/datafusion-remote-table"
 readme = "../README.md"
 
 [features]
-default = ["postgres", "mysql", "oracle"]
+default = ["postgres", "mysql", "oracle", "sqlite"]
 postgres = ["dep:bb8", "dep:bb8-postgres"]
 mysql = ["dep:mysql_async"]
 oracle = ["dep:bb8", "dep:oracle", "dep:bb8-oracle"]
