--- a/integration-tests/Cargo.toml
+++ b/integration-tests/Cargo.toml
@@ -10,3 +10,5 @@ datafusion = { workspace = true }
 datafusion-proto = { workspace = true }
 tokio = { workspace = true }
 ctor = "0.4"
+rusqlite = { workspace = true }
+uuid = { version = "1.16.0", features = ["v4"] }
