--- a/remote-table/Cargo.toml
+++ b/remote-table/Cargo.toml
@@ -47,5 +47,5 @@ mysql_async = { version = "0.35", features = [
 oracle = { version = "0.6", optional = true }
 bb8-oracle = { version = "0.3", features = ["chrono"], optional = true}
 # Sqlite
-rusqlite = { version = "0.32", features = ["column_decltype"], optional = true }
+rusqlite = { workspace = true, features = ["column_decltype"], optional = true }
 tokio-rusqlite = { version = "0.6.0", features = ["bundled"], optional = true }
