--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Build with only sqlite
         run: cargo check -p datafusion-remote-table --no-default-features --features sqlite
 
+      - name: Build with only dm
+        run: cargo check -p datafusion-remote-table --no-default-features --features dm
+
   test:
     name: Tests
     runs-on: ubuntu-latest
