--- a/remote-table/Cargo.toml
+++ b/remote-table/Cargo.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/systemxlabs/datafusion-remote-table"
 readme = "../README.md"
 
 [features]
-default = ["postgres", "mysql", "oracle", "sqlite", "dm"]
+default = ["postgres", "mysql", "oracle", "sqlite"]
 postgres = ["dep:bb8", "dep:bb8-postgres"]
 mysql = ["dep:mysql_async"]
 oracle = ["dep:bb8", "dep:oracle", "dep:bb8-oracle"]
