Make dm query works

--- a/remote-table/Cargo.toml
+++ b/remote-table/Cargo.toml
@@ -15,7 +15,7 @@ postgres = ["dep:bb8", "dep:bb8-postgres"]
 mysql = ["dep:mysql_async"]
 oracle = ["dep:bb8", "dep:oracle", "dep:bb8-oracle"]
 sqlite = ["dep:rusqlite", "dep:tokio-rusqlite"]
-dm = ["dep:odbc-api"]
+dm = ["dep:odbc-api", "dep:arrow-odbc"]
 
 [dependencies]
 datafusion = { workspace = true }
@@ -52,3 +52,4 @@ rusqlite = { workspace = true, features = ["column_decltype"], optional = true }
 tokio-rusqlite = { version = "0.6.0", features = ["bundled"], optional = true }
 # Dm
 odbc-api = { version = "12.2", optional = true }
+arrow-odbc = { version = "16.0", optional = true }
