--- a/remote-table/Cargo.toml
+++ b/remote-table/Cargo.toml
@@ -15,7 +15,7 @@ postgres = ["dep:bb8", "dep:bb8-postgres"]
 mysql = ["dep:mysql_async"]
 oracle = ["dep:bb8", "dep:oracle", "dep:bb8-oracle"]
 sqlite = ["dep:rusqlite", "dep:tokio-rusqlite"]
-dm = ["dep:odbc-api", "dep:arrow-odbc"]
+dm = ["dep:odbc-api"]
 
 [dependencies]
 datafusion = { workspace = true }
@@ -51,5 +51,4 @@ bb8-oracle = { version = "0.3", features = ["chrono"], optional = true}
 rusqlite = { workspace = true, features = ["column_decltype"], optional = true }
 tokio-rusqlite = { version = "0.6.0", features = ["bundled"], optional = true }
 # Dm
-odbc-api = { version = "11", optional = true }
-arrow-odbc = { version = "15.1", optional = true }
+odbc-api = { version = "12", optional = true }
