--- a/remote-table/Cargo.toml
+++ b/remote-table/Cargo.toml
@@ -38,7 +38,7 @@ bb8 = { version = "0.9", optional = true }
 # Postgres
 bb8-postgres = { version = "0.9", features = ["with-chrono-0_4", "with-serde_json-1"], optional = true }
 # MySQL
-mysql_async = { version = "0.35", features = [
+mysql_async = { version = "0.36", features = [
     "native-tls-tls",
     "chrono",
     "time",
@@ -51,4 +51,4 @@ bb8-oracle = { version = "0.3", features = ["chrono"], optional = true}
 rusqlite = { workspace = true, features = ["column_decltype"], optional = true }
 tokio-rusqlite = { version = "0.6.0", features = ["bundled"], optional = true }
 # Dm
-odbc-api = { version = "12", optional = true }
+odbc-api = { version = "13", default-features = false, features = ["odbc_version_3_80"], optional = true }
